--- a/.github/workflows/engine_health_test.yml
+++ b/.github/workflows/engine_health_test.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Install dependencies
       # Install behave
       run: |
-        pip install ${{env.ENGINE_DIR}}/test/integration_tests/api-communication/
+        pip install ${{env.ENGINE_DIR}}/tools/api-communication/
         pip install ${{env.ENGINE_DIR}}/tools/engine-suite/
 
     - name: Configure CMake
@@ -62,11 +62,11 @@ jobs:
 
     - name: Setup environment
       # Set Engine Configuration
-      run: bash ${{env.ENGINE_DIR}}/test/setupEnvironment.sh -d ${{github.workspace}}
+      run: bash ${{env.ENGINE_DIR}}/test/setupEnvironment.sh
 
     - name: Initial state
-      run: bash ${{env.ENGINE_DIR}}/test/health_test/initialState.sh -d ${{github.workspace}}
+      run: bash ${{env.ENGINE_DIR}}/test/health_test/initialState.sh
 
     - name: Health Test
       # Run integration tests using behave
-      run: bash ${{env.ENGINE_DIR}}/test/health_test/run.sh -d ${{github.workspace}}
+      run: bash ${{env.ENGINE_DIR}}/test/health_test/run.sh
