--- a/src/engine/ruleset/integrations/wazuh-indexer/decoders/wazuh-indexer-deprecation.yml
+++ b/src/engine/ruleset/integrations/wazuh-indexer/decoders/wazuh-indexer-deprecation.yml
@@ -15,35 +15,34 @@ metadata:
     - "https://documentation.wazuh.com/current/getting-started/components/wazuh-indexer.html"
     - "https://opensearch.org/docs/latest/monitoring-your-cluster/logs/"
 
-parents:
-  - decoder/integrations/0
-
 check:
-  - json_event.type: deprecation
-  - json_event.cluster\.name: exists()
+  - wazuh.origin: /var/log/wazuh-indexer/wazuh-cluster_deprecation.json
   # TODO: Once the events arrive tagged, uncomment the following two lines
   # - event.module: wazuh-indexer
   # - event.dataset: wazuh-indexer-deprecation
 
+parse|event.original:
+  - <_json_event/json>
+
+#TODO: Add temporal fields to schema
 normalize:
   - map:
-      - json_event.timestamp: +replace/,/.
-  - logpar:
-      - json_event.timestamp: <@timestamp/%FT%TZ>
+      - _json_event.timestamp: replace(',','.')
+  - parse|_json_event.timestamp:
+      - <@timestamp/%FT%TZ>
   - map:
       - event.module: wazuh-indexer
       - event.dataset: wazuh-indexer-deprecation
-      - wazuh.decoders: +array_append/wazuh-indexer-deprecation
+      - wazuh.decoders: array_append(wazuh-indexer-deprecation)
       - event.kind: event
-      - event.category: +array_append/database
-      - event.type: +array_append/info
-      - log.level: $json_event.level
-      - log.logger: $json_event.component
-      - host.name: $json_event.node\.name
-      - host.id: $json_event.node\.id
-      - ~cluster.name: $json_event.cluster\.name
-      - ~cluster.uuid: $json_event.cluster\.uuid
-      - ~node.name: $json_event.node\.name
-      - ~node.id: $json_event.node\.id
-      - message: $json_event.message
-      - json_event: delete()
+      - event.category: array_append(database)
+      - event.type: array_append(info)
+      - log.level: $_json_event.level
+      - log.logger: $_json_event.component
+      - host.name: $_json_event.node\.name
+      - host.id: $_json_event.node\.id
+      - cluster.name: $_json_event.cluster\.name
+      - cluster.uuid: $_json_event.cluster\.uuid
+      - node.name: $_json_event.node\.name
+      - node.id: $_json_event.node\.id
+      - message: $_json_event.message
