--- a/src/engine/ruleset/integrations/wazuh-indexer/decoders/wazuh-indexer-slowlog.yml
+++ b/src/engine/ruleset/integrations/wazuh-indexer/decoders/wazuh-indexer-slowlog.yml
@@ -15,57 +15,59 @@ metadata:
     - "https://documentation.wazuh.com/current/getting-started/components/wazuh-indexer.html"
     - "https://opensearch.org/docs/latest/monitoring-your-cluster/logs/"
 
-parents:
-  - decoder/integrations/0
-
-check: $json_event.type==index_search_slowlog OR $json_event.type==index_indexing_slowlog
+check: >-
+    $wazuh.origin == /var/log/wazuh-indexer/wazuh-cluster_index_indexing_slowlog.json OR
+    $wazuh.origin == /var/log/wazuh-indexer/wazuh-cluster_index_search_slowlog.json
   # TODO: Once the events arrive tagged, uncomment the following two lines
   # - event.module: wazuh-indexer
   # - event.dataset: wazuh-indexer-slowlog
 
-definitions:
-  isError: $log.level==FATAL OR $log.level==ERROR
-  isInfo: $log.level!=FATAL AND $log.level!=ERROR
+parse|event.original:
+  - <_json_event/json>
 
+definitions:
+  isError: $log.level == FATAL OR $log.level == ERROR
+  isInfo: $log.level != FATAL AND $log.level != ERROR
+
+#TODO: Add temporal fields to schema
 normalize:
   - map:
-      - json_event.timestamp: +replace/,/.
-  - logpar:
-      - json_event.timestamp: <@timestamp/%FT%TZ>
+      - _json_event.timestamp: replace(',','.')
+  - parse|_json_event.timestamp:
+      - <@timestamp/%FT%TZ>
   - map:
       - event.module: wazuh-indexer
       - event.dataset: wazuh-indexer-slowlog
-      - wazuh.decoders: +array_append/wazuh-indexer-slowlog
+      - wazuh.decoders: array_append(wazuh-indexer-slowlog)
       - event.kind: event
-      - event.category: +array_append/database
-      - log.level: $json_event.level
-      - log.logger: $json_event.component
+      - event.category: array_append(database)
+      - log.level: $_json_event.level
+      - log.logger: $_json_event.component
 
   - check: $isError
     map:
-      - event.type: +array_append/error
+      - event.type: array_append(error)
 
   - check: $isInfo
     map:
-      - event.type: +array_append/info
+      - event.type: array_append(info)
 
-  - logpar:
-      - json_event.took_millis: <event.duration>
+  - parse|_json_event.took_millis:
+      - <event.duration>
 
   - map:
-      - event.duration: +int_calculate/mul/1000000
-      - host.name: $json_event.node\.name
-      - host.id: $json_event.node\.id
-      - ~cluster.name: $json_event.cluster\.name
-      - ~cluster.uuid: $json_event.cluster\.uuid
-      - ~node.name: $json_event.node\.name
-      - ~node.id: $json_event.node\.id
-      - message: $json_event.message
-      - ~slowlog.took: $json_event.took
-      - ~slowlog.total_hits: $json_event.total_hits
-      - ~slowlog.stats: $json_event.stats
-      - ~slowlog.search_type: $json_event.search_type
-      - ~slowlog.total_shards: $json_event.total_shards
-      - ~slowlog.source: $json_event.source
-      - ~slowlog.id: $json_event.id
-      - json_event: delete()
+      - event.duration: int_calculate(mul,1000000)
+      - host.name: $_json_event.node\.name
+      - host.id: $_json_event.node\.id
+      - cluster.name: $_json_event.cluster\.name
+      - cluster.uuid: $_json_event.cluster\.uuid
+      - node.name: $_json_event.node\.name
+      - node.id: $_json_event.node\.id
+      - message: $_json_event.message
+      - slowlog.took: $_json_event.took
+      - slowlog.total_hits: $_json_event.total_hits
+      - slowlog.stats: $_json_event.stats
+      - slowlog.search_type: $_json_event.search_type
+      - slowlog.total_shards: $_json_event.total_shards
+      - slowlog.source: $_json_event.source
+      - slowlog.id: $_json_event.id
