--- a/src/shared_modules/content_manager/CMakeLists.txt
+++ b/src/shared_modules/content_manager/CMakeLists.txt
@@ -25,6 +25,7 @@ include_directories(${SRC_FOLDER}/external/curl/include/curl)
 include_directories(${SRC_FOLDER}/external/lzma/src/liblzma/api)
 include_directories(${SRC_FOLDER}/external/rocksdb/include)
 include_directories(${SRC_FOLDER}/external/zlib/)
+include_directories(${SRC_FOLDER}/external/zlib/contrib/)
 
 include_directories(${SHARED_MODULES})
 include_directories(${SHARED_MODULES}/utils)
@@ -37,6 +38,7 @@ link_directories(${SRC_FOLDER})
 link_directories(${SRC_FOLDER}/external/lzma/build/)
 link_directories(${SRC_FOLDER}/external/rocksdb/build/)
 link_directories(${SRC_FOLDER}/external/zlib/)
+link_directories(${SRC_FOLDER}/external/zlib/contrib/minizip/)
 link_directories(${SHARED_MODULES}/router/build)
 link_directories(${SHARED_MODULES}/http-request/build)
 
