--- a/ruleset/sca/debian/cis_debian12.yml
+++ b/ruleset/sca/debian/cis_debian12.yml
@@ -189,10 +189,11 @@ checks:
       - mitre_techniques: ["T1110", "T1003", "T1081", "T1097", "T1178", "T1072", "T1067", "T1495", "T1019", "T1177", "T1485", "T1486", "T1491", "T1488", "T1487", "T1490", "T1146", "T1148", "T1015", "T1133", "T1200", "T1076", "T1051", "T1176", "T1501", "T1087", "T1098", "T1139", "T1197", "T1092", "T1136", "T1011", "T1147", "T1130", "T1174", "T1053", "T1166", "T1206", "T1503", "T1214", "T1187", "T1208", "T1142", "T1075", "T1201", "T1145", "T1184", "T1537", "T1078", "T1077", "T1134", "T1017", "T1088", "T1175", "T1190", "T1210", "T1525", "T1215", "T1086", "T1055", "T1505", "T1035", "T1218", "T1169", "T1100", "T1047", "T1084", "T1028", "T1156", "T1196", "T1530", "T1089", "T1073", "T1157", "T1054", "T1070", "T1037", "T1036", "T1096", "T1034", "T1150", "T1504", "T1494", "T1489", "T1198", "T1165", "T1492", "T1080", "T1209", "T1112", "T1058", "T1173", "T1137", "T1539", "T1535", "T1506", "T1138", "T1044", "T1199"]
       - nist_sp_800-53: ["AU-2", "CM-1", "CM-2", "CM-6", "CM-7", "IA-5", "IA-6", "SC-20", "SC-21"]
       - pci_dss_v3.2.1: ["2.2"]
-    condition: all
+    condition: any
     rules:
       - "c:mount -> r:tmpfs on /tmp type tmpfs"
-      - "f:/etc/fstab -> r:tmpfs /tmp tmpfs"
+      - 'f:/etc/fstab -> !r:^\s*\t*# && r:tmpfs /tmp tmpfs'
+      - "c:systemctl is-enabled tmp.mount -> r:^enabled"
 
   # 1.1.3 Ensure nodev option set on /tmp partition (Automated)
   - id: 33008 
@@ -210,7 +211,7 @@ checks:
       - pci_dss_v3.2.1: ["2.2"]
     condition: all
     rules:
-      - "c:mount -> r:tmpfs on /tmp type tmpfs && r:nodev"
+      - 'not c:mount -> r:\s*/tmp\s && !r:nodev'
 
   # 1.1.4 Ensure nosuid option set on /tmp partition (Automated)
   - id: 33009 
@@ -228,7 +229,7 @@ checks:
       - pci_dss_v3.2.1: ["2.2"]
     condition: all
     rules:
-      - "c:mount -> r:tmpfs on /tmp type tmpfs && r:nosuid"
+      - 'not c:mount -> r:\s*/tmp\s && !r:nosuid'
 
   # 1.1.5 Ensure noexec option set on /tmp partition (Automated)
   - id: 33010 
@@ -245,7 +246,7 @@ checks:
       - nist_sp_800-53: ["CM-11"]
     condition: all
     rules:
-      - "c:mount -> r:tmpfs on /tmp type tmpfs && r:noexec"
+      - 'not c:mount -> r:\s*/tmp\s && !r:noexec'
 
   # 1.1.6 Ensure separate partition exists for /var (Automated)
   - id: 33011 
@@ -303,7 +304,7 @@ checks:
       - pci_dss_v3.2.1: ["2.2"]
     condition: all
     rules:
-      - 'c:mount -> r:\S+ on /var/tmp type ext4 && r:nodev'
+      - 'not c:mount -> r:\s*/var/tmp\s && !r:nodev'
 
   # 1.1.9 Ensure nosuid option set on /var/tmp partition (Automated)
   - id: 33014 
@@ -338,7 +339,7 @@ checks:
       - nist_sp_800-53: ["CM-11"]
     condition: all
     rules:
-      - 'c:mount -> r:\S+ on /var/tmp type ext4 && r:noexec'
+      - 'not c:mount -> r:\s*/var/tmp\s && !r:noexec'
 
   # 1.1.11 Ensure separate partition exists for /var/log (Automated)
   - id: 33016 
@@ -415,7 +416,7 @@ checks:
       - pci_dss_v3.2.1: ["2.2"]
     condition: all
     rules:
-      - "c:mount -> r:/dev/xvdf1 on /home type ext4 && r:nodev"
+      - 'not c:mount -> r:\s*/var/tmp\s && !r:nodev'
 
   # 1.1.15 Ensure nodev option set on /dev/shm partition (Automated)
   - id: 33020 
@@ -433,7 +434,7 @@ checks:
       - pci_dss_v3.2.1: ["2.2"]
     condition: all
     rules:
-      - "c:mount -> r:tmpfs on /dev/shm type tmpfs && r:nodev"
+      - 'not c:mount -> r:\s*/dev/shm\s && !r:nodev'
 
   # 1.1.16 Ensure nosuid option set on /dev/shm partition (Automated)
   - id: 33021 
@@ -451,7 +452,7 @@ checks:
       - pci_dss_v3.2.1: ["2.2"]
     condition: all
     rules:
-      - "c:mount -> r:tmpfs on /dev/shm type tmpfs && r:nosuid"
+      - 'not c:mount -> r:\s*/dev/shm\s && !r:nosuid'
 
   # 1.1.17 Ensure noexec option set on /dev/shm partition (Automated)
   - id: 33022 
@@ -468,7 +469,7 @@ checks:
       - nist_sp_800-53: ["CM-11"]
     condition: all
     rules:
-      - "c:mount -> r:tmpfs on /dev/shm type tmpfs && r:noexec"
+      - 'not c:mount -> r:\s*/dev/shm\s && !r:noexec'
 
   # 1.1.18 Ensure nodev option set on removable media partitions (Manual) - Not Implemented
   # 1.1.19 Ensure nosuid option set on removable media partitions (Manual) - Not Implemented
@@ -546,8 +547,6 @@ checks:
     description: "sudo can be configured to run only from a pseudo-pty Note: visudo edits the sudoers file in a safe fashion, analogous to vipw(8). visudo locks the sudoers file against multiple simultaneous edits, provides basic sanity checks, and checks or parse errors. If the sudoers file is currently being edited you will receive a message to try again later."
     rationale: "Attackers can run a malicious program using sudo, which would again fork a background process that remains even when the main program has finished executing."
     remediation: "Edit the file /etc/sudoers or a file in /etc/sudoers.d/ with visudo -f and add the following line: Defaults use_pty."
-    references:
-      - http://www.sudo.ws/
     compliance:
       - cis: ["1.3.2"]
       - cis_csc_v7: ["4.3"]
@@ -737,7 +736,7 @@ checks:
     rules:
       - "c:dpkg -s prelink -> r:package 'prelink' is not installed"
 
-  # 1.6.4 Ensure prelink is disabled (Automated)
+  # 1.6.4 Ensure core dumps are restricted (Automated)
   - id: 33036 
     title: "Ensure prelink is disabled."
     description: "A core dump is the memory of an executable program. It is generally used to determine why a program aborted. It can also be used to glean confidential information from a core file. The system provides the ability to set a soft limit for core dumps, but this can be overridden by the user."
@@ -751,9 +750,10 @@ checks:
       - mitre_techniques: ["T1110", "T1003", "T1081", "T1097", "T1178", "T1072", "T1067", "T1495", "T1019", "T1177", "T1485", "T1486", "T1491", "T1488", "T1487", "T1490", "T1146", "T1148", "T1015", "T1133", "T1200", "T1076", "T1051", "T1176", "T1501", "T1087", "T1098", "T1139", "T1197", "T1092", "T1136", "T1011", "T1147", "T1130", "T1174", "T1053", "T1166", "T1206", "T1503", "T1214", "T1187", "T1208", "T1142", "T1075", "T1201", "T1145", "T1184", "T1537", "T1078", "T1077", "T1134", "T1017", "T1088", "T1175", "T1190", "T1210", "T1525", "T1215", "T1086", "T1055", "T1505", "T1035", "T1218", "T1169", "T1100", "T1047", "T1084", "T1028", "T1156", "T1196", "T1530", "T1089", "T1073", "T1157", "T1054", "T1070", "T1037", "T1036", "T1096", "T1034", "T1150", "T1504", "T1494", "T1489", "T1198", "T1165", "T1492", "T1080", "T1209", "T1112", "T1058", "T1173", "T1137", "T1539", "T1535", "T1506", "T1138", "T1044", "T1199"]
       - nist_sp_800-53: ["AU-2", "CM-1", "CM-2", "CM-6", "CM-7", "IA-5", "IA-6", "SC-20", "SC-21"]
       - pci_dss_v3.2.1: ["2.2"]
-    condition: all
+    condition: any
     rules:
       - "f:/etc/security/limits.conf -> r:* hard core 0"
+      - 'd:/etc/security/limits.d -> r:\.*. -> r:* hard core 0'
       - 'c:sysctl fs.suid_dumpable -> r:fs.suid_dumpable = 0'
       - 'f:/etc/sysctl.conf -> r:fs.suid_dumpable = 0'
       - 'd:/etc/sysctl.d/* -> r:\.* -> r:fs.suid_dumpable = 0'
@@ -773,12 +773,12 @@ checks:
     remediation: "Add the following line to /etc/security/limits.conf or a /etc/security/limits.d/* file: * hard core 0 Set the following parameter in /etc/sysctl.conf or a /etc/sysctl.d/* file: fs.suid_dumpable = 0 Run the following command to set the active kernel parameter: # sysctl -w fs.suid_dumpable=0 If systemd-coredump is installed: edit /etc/systemd/coredump.conf and add/modify the following lines: Storage=none ProcessSizeMax=0 Run the command: systemctl daemon-reload."
     compliance:
       - cis: ["1.7.1.1"]
-      - cis_csc_v7: ["5.1"]
-      - cmmc_v2.0: ["AC.1.002", "CM.2.061", "SC.3.180"]
-      - iso_27001-2013: ["A.8.1.3", "A.14.2.5"]
-      - mitre_techniques: ["T1110", "T1003", "T1081", "T1097", "T1178", "T1072", "T1067", "T1495", "T1019", "T1177", "T1485", "T1486", "T1491", "T1488", "T1487", "T1490", "T1146", "T1148", "T1015", "T1133", "T1200", "T1076", "T1051", "T1176", "T1501", "T1087", "T1098", "T1139", "T1197", "T1092", "T1136", "T1011", "T1147", "T1130", "T1174", "T1053", "T1166", "T1206", "T1503", "T1214", "T1187", "T1208", "T1142", "T1075", "T1201", "T1145", "T1184", "T1537", "T1078", "T1077", "T1134", "T1017", "T1088", "T1175", "T1190", "T1210", "T1525", "T1215", "T1086", "T1055", "T1505", "T1035", "T1218", "T1169", "T1100", "T1047", "T1084", "T1028", "T1156", "T1196", "T1530", "T1089", "T1073", "T1157", "T1054", "T1070", "T1037", "T1036", "T1096", "T1034", "T1150", "T1504", "T1494", "T1489", "T1198", "T1165", "T1492", "T1080", "T1209", "T1112", "T1058", "T1173", "T1137", "T1539", "T1535", "T1506", "T1138", "T1044", "T1199"]
-      - nist_sp_800-53: ["AU-2", "CM-1", "CM-2", "CM-6", "CM-7", "IA-5", "IA-6", "SC-20", "SC-21"]
-      - pci_dss_v3.2.1: ["2.2"]
+      - cis_csc_v7: ["14.6"]
+      - cmmc_v2.0: ["AC.2.007", "MP.2.120"]
+      - iso_27001-2013: ["A.9.1.1"]
+      - mitre_techniques: ["T1015", "T1133", "T1200", "T1076", "T1051", "T1156", "T1146", "T1196", "T1081", "T1530", "T1089", "T1073", "T1157", "T1054", "T1070", "T1037", "T1036", "T1096", "T1034", "T1150", "T1504", "T1145", "T1494", "T1035", "T1489", "T1198", "T1184", "T1165", "T1492", "T1169", "T1501", "T1080", "T1209", "T1134", "T1197", "T1538", "T1213", "T1044", "T1484", "T1159", "T1160", "T1152", "T1168", "T1162", "T1185", "T1031", "T1050", "T1075", "T1097", "T1163", "T1021", "T1053", "T1023", "T1528", "T1072", "T1537", "T1078", "T1047", "T1084", "T1004"]
+      - nist_sp_800-53: ["AC-3"]
+      - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
     condition: all
     rules:
       - 'c:dpkg -s apparmor -> r:install ok installed'
@@ -799,8 +799,8 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
     condition: all
     rules:
-      - 'f:/boot/grub/grub.cfg -> r:apparmor=1'
-      - 'f:/boot/grub/grub.cfg -> r:security=apparmor'
+      - 'not f:/boot/grub/grub.cfg -> r:\s*linux && !r:apparmor=1'
+      - 'not f:/boot/grub/grub.cfg -> r:\s*linux && !r:security=apparmor'
 
   # 1.7.1.3 Ensure all AppArmor Profiles are in enforce or complain mode (Automated)
   - id: 33039 
@@ -972,7 +972,9 @@ checks:
     condition: all
     rules:
       - 'c:dpkg -s GDM -> r:install ok installed'
-      - 'f:/etc/gdm3/greeter.dconf-defaults -> r:banner-message-enable=true | banner-message-text=\S+ | disable-user-list=true'
+      - 'f:/etc/gdm3/greeter.dconf-defaults -> r:banner-message-enable=true'
+      - 'f:/etc/gdm3/greeter.dconf-defaults -> r:banner-message-text=\S+'
+      - 'f:/etc/gdm3/greeter.dconf-defaults -> r:disable-user-list=true'
 
    # 1.10 Ensure updates, patches, and additional security software are installed (Manual)
   - id: 33048 
