--- a/src/shared_modules/router/tests/CMakeLists.txt
+++ b/src/shared_modules/router/tests/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.12.4)
 include_directories(${SRC_FOLDER}/external/googletest/googletest/include/)
 include_directories(${SRC_FOLDER}/external/googletest/googlemock/include/)
 include_directories(${SRC_FOLDER}/shared_modules/router/)
+include_directories(${SRC_FOLDER}/shared_modules/router/src)
 
 link_directories(${SRC_FOLDER}/external/googletest/lib/)
 
