--- a/src/engine/source/api/CMakeLists.txt
+++ b/src/engine/source/api/CMakeLists.txt
@@ -22,9 +22,9 @@ add_library(api STATIC
     ${ENGINE_API_SOURCE_DIR}/policy/handlers.cpp
     ${ENGINE_API_SOURCE_DIR}/policy/policy.cpp
     ${ENGINE_API_SOURCE_DIR}/registry.cpp
-    ${ENGINE_API_SOURCE_DIR}/router/handlers.cpp
-    ${ENGINE_API_SOURCE_DIR}/test/handlers.cpp
-    ${ENGINE_API_SOURCE_DIR}/test/sessionManager.cpp
+    #${ENGINE_API_SOURCE_DIR}/router/handlers.cpp
+    #${ENGINE_API_SOURCE_DIR}/test/handlers.cpp
+    #${ENGINE_API_SOURCE_DIR}/test/sessionManager.cpp
 )
 
 target_include_directories(api
@@ -37,8 +37,8 @@ target_include_directories(api
     ${ENGINE_API_SOURCE_DIR}/kvdb
     ${ENGINE_API_SOURCE_DIR}/metrics
     ${ENGINE_API_SOURCE_DIR}/policy
-    ${ENGINE_API_SOURCE_DIR}/router
-    ${ENGINE_API_SOURCE_DIR}/test
+    #${ENGINE_API_SOURCE_DIR}/router
+    #${ENGINE_API_SOURCE_DIR}/test
 )
 
 target_link_libraries(api
@@ -50,7 +50,7 @@ target_link_libraries(api
     json
     kvdb::ikvdb
     metrics
-    router
+    # router
     store::fileDriver
     store::istore
     yml
@@ -81,10 +81,11 @@ add_executable(api_utest
   ${TEST_SRC_UNIT_DIR}/kvdb/kvdb_api_test.cpp
   ${TEST_SRC_UNIT_DIR}/policy/handlers_test.cpp
   ${TEST_SRC_UNIT_DIR}/policy/policy_test.cpp
-  ${TEST_SRC_UNIT_DIR}/test/session_test.cpp
+  # ${TEST_SRC_UNIT_DIR}/test/session_test.cpp
   ${TEST_SRC_UNIT_DIR}/adapter_test.cpp
   ${TEST_SRC_UNIT_DIR}/api_test.cpp
   ${TEST_SRC_UNIT_DIR}/registry_test.cpp
+
 )
 
 target_link_libraries(api_utest gtest_main base api schemf::mocks test_mocks store::mocks rbac::mocks api::mocks builder::mocks kvdb::mocks)
