--- a/src/engine/source/router2/CMakeLists.txt
+++ b/src/engine/source/router2/CMakeLists.txt
@@ -61,7 +61,7 @@ if(ENGINE_BUILD_TEST)
     add_executable(router_utest
         ${UNIT_SRC_DIR}/environment_test.cpp
         ${UNIT_SRC_DIR}/table_test.cpp
-        ${UNIT_SRC_DIR}/buildEnvironment_test.cpp
+        ${UNIT_SRC_DIR}/environmentBuilder_test.cpp
         ${UNIT_SRC_DIR}/router_test.cpp
     )
     target_include_directories(router_utest PRIVATE ${SRC_DIR})
