Implemenent the event endpoint and postEnvt of route

--- a/src/engine/source/router2/CMakeLists.txt
+++ b/src/engine/source/router2/CMakeLists.txt
@@ -29,6 +29,7 @@ target_link_libraries(router2_router
     router2::irouter
     builder::ibuilder
     bk::ibk
+    queue::iqueue
 
     PRIVATE
     base
