--- a/framework/requirements.txt
+++ b/framework/requirements.txt
@@ -62,6 +62,7 @@ protobuf==3.19.6
 proto-plus==1.19.0
 psutil==5.8.0
 pyarrow==8.0.0
+pyarrow_hotfix==0.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
