--- a/src/engine/source/api/CMakeLists.txt
+++ b/src/engine/source/api/CMakeLists.txt
@@ -22,7 +22,7 @@ add_library(api STATIC
     ${ENGINE_API_SOURCE_DIR}/policy/handlers.cpp
     ${ENGINE_API_SOURCE_DIR}/policy/policy.cpp
     ${ENGINE_API_SOURCE_DIR}/registry.cpp
-    #${ENGINE_API_SOURCE_DIR}/router/handlers.cpp
+    ${ENGINE_API_SOURCE_DIR}/router/handlers.cpp
     #${ENGINE_API_SOURCE_DIR}/test/handlers.cpp
     #${ENGINE_API_SOURCE_DIR}/test/sessionManager.cpp
 )
@@ -37,7 +37,7 @@ target_include_directories(api
     ${ENGINE_API_SOURCE_DIR}/kvdb
     ${ENGINE_API_SOURCE_DIR}/metrics
     ${ENGINE_API_SOURCE_DIR}/policy
-    #${ENGINE_API_SOURCE_DIR}/router
+    ${ENGINE_API_SOURCE_DIR}/router
     #${ENGINE_API_SOURCE_DIR}/test
 )
 
@@ -51,6 +51,7 @@ target_link_libraries(api
     kvdb::ikvdb
     metrics
     # router
+    router2::irouter
     store::fileDriver
     store::istore
     yml
@@ -82,6 +83,7 @@ add_executable(api_utest
   ${TEST_SRC_UNIT_DIR}/policy/handlers_test.cpp
   ${TEST_SRC_UNIT_DIR}/policy/policy_test.cpp
   # ${TEST_SRC_UNIT_DIR}/test/session_test.cpp
+  # ${TEST_SRC_UNIT_DIR}/router/handlers_test.cpp
   ${TEST_SRC_UNIT_DIR}/adapter_test.cpp
   ${TEST_SRC_UNIT_DIR}/api_test.cpp
   ${TEST_SRC_UNIT_DIR}/registry_test.cpp
