Change compilation logic for google benchmark dependency.

--- a/src/shared_modules/content_manager/tests/unit/CMakeLists.txt
+++ b/src/shared_modules/content_manager/tests/unit/CMakeLists.txt
@@ -13,9 +13,10 @@ file(GLOB PROJECT_SOURCES
 add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})
 
 target_link_libraries(${PROJECT_NAME}
-    gtest
-    gtest_main
-    gmock
+    debug gtestd
+    debug gmockd
+    optimized gtest
+    optimized gmock
     urlrequest
     router
     wazuhext
