--- a/src/shared_modules/content_manager/tests/component/CMakeLists.txt
+++ b/src/shared_modules/content_manager/tests/component/CMakeLists.txt
@@ -13,9 +13,12 @@ file(GLOB PROJECT_SOURCES
 add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})
 
 target_link_libraries(${PROJECT_NAME}
-    gtest
-    gtest_main
-    gmock
+    debug gtest_maind
+    debug gtestd
+    debug gmockd
+    optimized gtest_main
+    optimized gtest
+    optimized gmock
     urlrequest
     router
     rocksdb
