--- a/src/shared_modules/router/tests/component/CMakeLists.txt
+++ b/src/shared_modules/router/tests/component/CMakeLists.txt
@@ -9,8 +9,10 @@ file(GLOB SOURCES
 add_executable(${PROJECT_NAME} ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME}
-        gtest
-        gtest_main
+        debug gtestd
+        debug gtest_maind
+        optimized gtest
+        optimized gtest_main
         router
         )
 
