--- a/src/shared_modules/utils/CMakeLists.txt
+++ b/src/shared_modules/utils/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.12.4)
 
+if(UNIT_TEST)
+    add_subdirectory(tests)
 
-add_subdirectory(tests)
-
-if(NOT ((CMAKE_C_COMPILER MATCHES ".*ccc-analyzer") OR (CMAKE_CXX_COMPILER MATCHES ".*c\\+\\+-analyzer")))
-  add_subdirectory(benchmark)
+    if(NOT ((CMAKE_C_COMPILER MATCHES ".*ccc-analyzer") OR (CMAKE_CXX_COMPILER MATCHES ".*c\\+\\+-analyzer")))
+      add_subdirectory(benchmark)
+    endif()
 endif()
