Added graph and expression building to policy factory methods

--- a/src/engine/source/builder2/CMakeLists.txt
+++ b/src/engine/source/builder2/CMakeLists.txt
@@ -10,25 +10,28 @@ target_link_libraries(builder2_ibuilder INTERFACE base) # Base for expression
 add_library(builder2::ibuilder ALIAS builder2_ibuilder)
 
 ## Lib
-add_library(builder2 STATIC
-    ${SRC_DIR}/builder.cpp
-    ${SRC_DIR}/policy/policy.cpp
-)
-target_include_directories(builder2
-    PUBLIC
+SET(BUILDER_PUB_INCS
     ${INC_DIR}
-
-    PRIVATE
+)
+SET(BUILDER_PRI_INCS
     ${SRC_DIR}
     ${INC_DIR}/builder
 )
+add_library(builder2 STATIC
+    ${SRC_DIR}/builder.cpp
+    ${SRC_DIR}/policy/factory.cpp
+    ${SRC_DIR}/policy/policy.cpp
+    ${SRC_DIR}/policy/assetBuilder.cpp
+    ${SRC_DIR}/filterBuilder.cpp
+)
+target_include_directories(builder2 PUBLIC ${BUILDER_PUB_INCS} PRIVATE ${BUILDER_PRI_INCS})
 target_link_libraries(builder2
     PUBLIC
     builder2::ibuilder
     store::istore
     schemf::ischema
+    defs
     base
-    json
 )
 
 # Tests
@@ -49,16 +52,26 @@ add_library(builder2::mocks ALIAS builder2_mocks)
 add_executable(builder2_ctest
     ${COMPONENT_SRC_DIR}/builder_test.cpp
 )
-target_link_libraries(builder2_ctest PRIVATE builder2::ibuilder builder2::mocks gtest_main)
+target_link_libraries(builder2_ctest PRIVATE builder2 gtest_main)
 gtest_discover_tests(builder2_ctest)
 
 ## Unit tests
 add_executable(builder2_utest
-    ${UNIT_SRC_DIR}/registry/registry_test.cpp
-    ${UNIT_SRC_DIR}/policy/policy_test.cpp
+    ${UNIT_SRC_DIR}/builders/registry_test.cpp
+    ${UNIT_SRC_DIR}/policy/factory_test.cpp
+    ${UNIT_SRC_DIR}/policy/assetBuilder_test.cpp
+    ${UNIT_SRC_DIR}/filterBuilder_test.cpp
+    ${UNIT_SRC_DIR}/exploratory_test.cpp # TODO: delete
 )
-target_include_directories(builder2_utest PRIVATE ${SRC_DIR} PUBLIC ${INC_DIR})
-target_link_libraries(builder2_utest PRIVATE builder2 builder2::mocks gtest_main schemf::mocks)
+target_include_directories(builder2_utest PUBLIC ${BUILDER_PUB_INCS} PRIVATE ${BUILDER_PRI_INCS} ${UNIT_SRC_DIR})
+target_link_libraries(builder2_utest
+    PRIVATE
+    builder2
+    builder2::mocks
+    gtest_main
+    schemf::mocks
+    store::mocks
+)
 gtest_discover_tests(builder2_utest)
 
 endif(ENGINE_BUILD_TEST)
